# qjsync

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  internet-rules.yml  pyproject.toml  test-rules.yml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  FIELD_MAPPING.md  JIRA_SETUP.md  LIFECYCLE.md
examples/: rules.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: bootstrap_jira_fields.py  probe_qualys_tags.py
src/qjsync/: __init__.py  __main__.py  cli.py  logging.py
src/qjsync/config/: __init__.py  loader.py  schema.py  settings.py
src/qjsync/jira/: __init__.py  adf.py  auth.py  client.py  mapper.py  null.py
src/qjsync/models/: __init__.py  canonical.py  identity.py
src/qjsync/rules/: __init__.py  engine.py  operators.py
src/qjsync/sink/: __init__.py  base.py  contract.py  local.py
src/qjsync/sources/: __init__.py  base.py
src/qjsync/sources/qualys/: __init__.py  client.py  detection.py  knowledgebase.py  parse.py  source.py
src/qjsync/state/: __init__.py  db.py  models.py  repositories.py
src/qjsync/sync/: __init__.py  orchestrator.py  purge.py  summary.py
tests/: conftest.py  test_adf.py  test_cli.py  test_config_loader.py  test_field_mapping.py  test_jira_client.py  test_local_sink.py  test_logging.py  test_orchestrator.py  test_purge_diff.py  test_qualys_client.py  test_qualys_detection.py  test_qualys_kb.py  test_qualys_parse.py  test_repositories.py  test_rules_engine.py  test_vm_source.py
tests/fixtures/: hld_sample.xml  kb_sample.xml
